--- a/Assets/Webpage/index.html
+++ b/Assets/Webpage/index.html
@@ -6,9 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord Bot Online</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/bc2ae7ad0e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, World!!</h1>
+  <div class="bot-content">
+    <h2>⚫ Bot is online!!</h2>  
+    <p>Thanks for using my command handler. In order to host this bot 24/7 for free go to <a href="https://uptimerobot.com/">uptimerobot</a> and create a monitor. Here is a tutorial on how to do that: <a href="#">Click Here</a>.</p>
+  </div>
+  <div class="credits">
+    <div class="container">
+    <div class="social-media-links">
+      <li style="margin-left:0;"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+      <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+      <li><a href=""><i class="fa-brands fa-discord"></i> Join the support server.</a></li>
+    </div>
+    <div class="copyright">
+      Made with ❤️ by <a href="https://nadid-wasique.netlify.app/#about">Nadid Wasique - DaTaklaCatto</a>
+    </div>
+  </div>      
+    </div>
+
+<div class="docs">
+  <a href="" target="_blank"><i class="fa-solid fa-book"></i> Docs</a>
+</div>
 </body>
 </html>
