--- a/Assets/Webpage/index.html
+++ b/Assets/Webpage/index.html
@@ -18,10 +18,10 @@
   <div class="credits">
     <div class="container">
     <div class="social-media-links">
-      <li style="margin-left:0;"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-github"></i></a></li>
-      <li><a href=""><i class="fa-brands fa-discord"></i> Join the support server.</a></li>
+      <li style="margin-left:0;"><a href="https://www.facebook.com/nadid.wasique/"><i class="fa-brands fa-facebook-f"></i></a></li>
+      <li><a href="https://www.instagram.com/nadid.ws_57/"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://github.com/DaTaklaCatto"><i class="fa-brands fa-github"></i></a></li>
+      <li><a href="https://discord.gg/Mdh23bsrhp"><i class="fa-brands fa-discord"></i> Join the support server.</a></li>
     </div>
     <div class="copyright">
       Made with ❤️ by <a href="https://nadid-wasique.netlify.app/#about">Nadid Wasique - DaTaklaCatto</a>
@@ -30,7 +30,7 @@
     </div>
 
 <div class="docs">
-  <a href="" target="_blank"><i class="fa-solid fa-book"></i> Docs</a>
+  <a href="https://github.com/DaTaklaCatto/Discord.JS-V14-Commands-Handler#readme" target="_blank"><i class="fa-solid fa-book"></i> Docs</a>
 </div>
 </body>
 </html>
